DOCS-Updates-Product-Comparison

--- a/calico-enterprise/about/product-comparison.mdx
+++ b/calico-enterprise/about/product-comparison.mdx
@@ -21,17 +21,16 @@ The SaaS version of Calico Enterprise. It adds Image Assurance to scan and detec
 
 ![calico-cloud](/img/calico/calico-cloud.svg)
 
-## Best fit
-
 What is the best fit for you? It depends on your needs. The following table provides a high-level comparison.
 
 | Product                   | Cost and support                                             | Best fit                                                     |
 | ------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | Calico Open Source | Free, community-supported                                    | **Users** who want best-in-class networking and network policy capabilities for Kubernetes without any costs. |
 | Calico Enterprise   | Paid subscription                                            | **Enterprise teams** who need full control to customize their networking security deployment to meet regulatory and compliance requirements for Kubernetes at scale. Teams who want Tigera Customer Support for day-zero to production best practices, custom training and workshops, and Solution Architects to customize solutions. |
-| Calico Cloud       | Free trial with hands-on training from Customer Support, then pay-as-you-go with self-service training. Also offered as an annual subscription. | **Small teams** who need to manage the full spectrum of compliance in a web-based console for novice users:<br />- Secure clusters, pods, and applications <br />- Scan images for vulnerabilities<br />- Web-based UI for visibility to troubleshoot Kubernetes<br />- Detect and mitigate threats <br />- Run compliance reports<br /><br />**Enterprise teams** who want to scale their {{prodname}} Enterprise on-premises deployments by providing more self-service to developers. |
+| Calico Cloud       | Free trial with hands-on training from Customer Support, then pay-as-you-go with self-service training. Also offered as an annual subscription. | **Small teams** who need to manage the full spectrum of compliance in a web-based console for novice users:<br />- Secure clusters, pods, and applications <br />- Scan images for vulnerabilities<br />- Web-based UI for visibility to troubleshoot Kubernetes<br />- Detect and mitigate threats <br />- Run compliance reports<br /><br />**Enterprise teams** who want to scale their Calico Enterprise on-premises deployments by providing more self-service to developers. |
 
 ## Product comparison by feature
+
 
 |                                                              | Calico Open Source       | Calico Cloud             | Calico Enterprise  |
 | ------------------------------------------------------------ | ------------------------ | ------------------------ | ------------------------ |
@@ -70,21 +69,20 @@ What is the best fit for you? It depends on your needs. The following table prov
 | iptables                                                     | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Windows HNS                                                  | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | VPP                                                          | <center>&#10003</center> |                          |                          |
-| **Image Assurance**                                          |                          |                          |                          |
+| **Image vulnerability management**                           |                          |                          |                          |
 | Scan images for vulnerabilities for workloads in Kubernetes cluster |                          | <center>&#10003</center> |                          |
 | Create policy to block vulnerable images from your clusters  |                          | <center>&#10003</center> |                          |
 | Runtime view to assess impact of newly-found vulnerabilities |                          | <center>&#10003</center> |                          |
-| **Observability and troubleshooting**                        |                          |                          |                          |
-| Application level observability and troubleshooting          |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Service Graph                                                |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Packet capture                                               |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Elasticsearch  logs (flow, l7, audit, bgp, dns, events)      |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Alerts                                                       |                          | <center>&#10003</center> | <center>&#10003</center> |
+| **Application observability and troubleshooting**            |                          |                          |                          |
+| Graphical view of deployment (Service Graph)                                |<center>Using third-party tools</center>| <center>&#10003</center> | <center>&#10003</center> |
+| Packet capture                                               |<center>Using third-party tools</center>| <center>&#10003</center> | <center>&#10003</center> |
+| Exportable logs                                              |<center>L3-4 flows, manual integration with any SIEM</center> | Preconfigured Elasticsearch dashboards: flow, audit, bgp, dns, L7 | Preconfigured Elasticsearch dashboards: flow, audit, bgp, dns, L7 |
+| Critical metrics and automated alerts                                                       |<center>Supports manual deployment</center>| <center>&#10003</center> | <center>&#10003</center> |
 | Kibana DNS dashboards                                        |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Traffic Flow Visualizer                                      |                          | <center>&#10003</center> | <center>&#10003</center> |
 | **Multi-cluster management**                                 |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Multi-cluster management                                     |                          |                          | <center>&#10003</center> |
-| Federated identity and services                              |                          | <center>&#10003</center> | <center>&#10003</center> |
+| Cluster mesh                                                 |                          | <center>&#10003</center> | <center>&#10003</center> |
 | **Threat defense**                                           |                          |                          |                          |
 | Container threat detection                                   |                          | <center>&#10003</center> |                          |
 | Workload-centric Web Application Firewall (WAF)              |                          | <center>&#10003</center> | <center>&#10003</center> |
