--- a/calico_versioned_docs/version-3.26/about/product-comparison.mdx
+++ b/calico_versioned_docs/version-3.26/about/product-comparison.mdx
@@ -31,6 +31,7 @@ What is the best fit for you? It depends on your needs. The following table prov
 
 ## Product comparison by feature
 
+
 |                                                              | Calico Open Source       | Calico Cloud             | Calico Enterprise  |
 | ------------------------------------------------------------ | ------------------------ | ------------------------ | ------------------------ |
 | **Networking**                                               |                          |                          |                          |
@@ -72,19 +73,17 @@ What is the best fit for you? It depends on your needs. The following table prov
 | Scan images for vulnerabilities for workloads in Kubernetes cluster |                          | <center>&#10003</center> |                          |
 | Create policy to block vulnerable images from your clusters  |                          | <center>&#10003</center> |                          |
 | Runtime view to assess impact of newly-found vulnerabilities |                          | <center>&#10003</center> |                          |
-| **Observability and troubleshooting**                        |                          |                          |                          |
-| Application level observability and troubleshooting          |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Service Graph                                                |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Packet capture                                               |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Elasticsearch  logs (flow, l7, audit, bgp, dns, events)      |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Alerts                                                       |                          | <center>&#10003</center> | <center>&#10003</center> |
+| **Application observability and troubleshooting**            |                          |                          |                          |
+| Graphical view of deployment (Service Graph)                                |<center>Using third-party tools</center>| <center>&#10003</center> | <center>&#10003</center> |
+| Packet capture                                               |<center>Using third-party tools</center>| <center>&#10003</center> | <center>&#10003</center> |
+| Exportable logs                                              |<center>L3-4 flows, manual integration with any SIEM</center> | Preconfigured Elasticsearch dashboards: flow, audit, bgp, dns, L7 | Preconfigured Elasticsearch dashboards: flow, audit, bgp, dns, L7 |
+| Critical metrics and automated alerts                                                       |<center>Supports manual deployment</center>| <center>&#10003</center> | <center>&#10003</center> |
 | Kibana DNS dashboards                                        |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Traffic Flow Visualizer                                      |                          | <center>&#10003</center> | <center>&#10003</center> |
 | **Multi-cluster management**                                 |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Multi-cluster management                                     |                          |                          | <center>&#10003</center> |
-| Federated identity and services                              |                          | <center>&#10003</center> | <center>&#10003</center> |
+| Cluster mesh                                                 |                          | <center>&#10003</center> | <center>&#10003</center> |
 | **Threat defense**                                           |                          |                          |                          |
-| Anomaly detection                                            |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Container threat detection                                   |                          | <center>&#10003</center> |                          |
 | Workload-centric Web Application Firewall (WAF)              |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Honeypods to see intruder activity                           |                          | <center>&#10003</center> | <center>&#10003</center> |
