--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -357,7 +357,7 @@ kubectl delete applicationlayer tigera-secure
 
 #### Keep some ApplicationLayer features enabled
 
-To disable WAF, but keep some ApplicationLayer features enabled, you must update the [ApplicationLayer](https://github.com/tigera/docs/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) custom resource.
+To disable WAF but keep some ApplicationLayer features enabled, you must update the [ApplicationLayer](https://github.com/tigera/docs/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) custom resource.
 
 Note that the [ApplicationLayer Specification](../reference/installation/api#operator.tigera.io/v1.ApplicationLayerSpec) can specify configuration for [Application Logging](../reference/installation/api#operator.tigera.io/v1.LogCollectionSpec) and [Application Layer Policy](../reference/installation/api#operator.tigera.io/v1.ApplicationLayerPolicyStatusType) also. 
 
