--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -281,11 +281,28 @@ To disable WAF on a service, use the Actions menu on the WAF board, or use the f
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
 ```
 
-#### Disable WAF feature from your cluster
+### Disable WAF feature from your cluster
 
-To disable WAF, update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
+To safely disable WAF, determine how to handle ApplicationLayer features and follow the steps:
 
-Example:
+#### Disable all ApplicationLayer features, including WAF
+
+```bash
+kubectl delete applicationlayer tigera-secure
+```
+
+#### Keep some ApplicationLayer features enabled
+
+To disable WAF but keep some ApplicationLayer features enabled, you must update the [ApplicationLayer](https://github.com/tigera/docs/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) custom resource.
+
+Note that the [ApplicationLayer Specification](../reference/installation/api#operator.tigera.io/v1.ApplicationLayerSpec) can specify configuration for [Application Logging](../reference/installation/api#operator.tigera.io/v1.LogCollectionSpec) and [Application Layer Policy](../reference/installation/api#operator.tigera.io/v1.ApplicationLayerPolicyStatusType) also. 
+
+For the ApplicationLayer custom resource to be valid, at least one of these features have to be enabled, for example:
+
+
+##### Valid YAML
+
+WAF enabled, ALP disabled, and Log collection is unspecified (and the default is disabled)
 
 ```yaml
 apiVersion: operator.tigera.io/v1
@@ -294,4 +311,18 @@ metadata:
   name: tigera-secure
 spec:
   webApplicationFirewall: Disabled
+  applicationLayerPolicy: Enabled
+```
+
+###### Invalid YAML
+
+WAF and ALP both set as disabled, log collection is unspecified (and the default is disabled)
+```yaml
+apiVersion: operator.tigera.io/v1
+kind: ApplicationLayer
+metadata:
+  name: tigera-secure
+spec:
+  webApplicationFirewall: Disabled
+  applicationLayerPolicy: Disabled
 ```
