DOCS-2055-Add-CC-Support-policy

--- a/calico-cloud_versioned_docs/version-18-2/get-started/upgrade-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/get-started/upgrade-cluster.mdx
@@ -4,6 +4,16 @@ description: Steps to upgrade to the latest version of Calico Cloud.
 
 # Upgrade Calico Cloud
 
+## Upgrade notices
+
+You are required to upgrade your cluster to the latest {{prodname}} version before the cluster reaches two minor releases older than the current release. For example, if the latest {{prodname}} version is based on 3.19, managed clusters with v3.16 or older will not be covered for fixes under the [Support policy](/get-started/suppport-policy).
+
+Upgrade notices are provided 26 days in advance in Manager UI, **Managed clusters** page. For example:
+
+![upgrade-notice](/img/calico-cloud/upgrade-notice.png)
+
+## Upgrade managed clusters
+
 To upgrade managed clusters to the latest version of {{prodname}}:
 
 1. In Manager UI, go to **Managed Clusters**.
@@ -13,3 +23,4 @@ To upgrade managed clusters to the latest version of {{prodname}}:
 
 ![reinstall](/img/calico-cloud/managed-clusters-reinstall.png)
 ![reinstall-step1](/img/calico-cloud/managed-clusters-reinstall-step1.png)
+
