--- a/calico-cloud_versioned_docs/version-18-2/get-started/support-policy-2022.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/get-started/support-policy-2022.mdx
@@ -1,8 +1,8 @@
 ---
-description: Calico Cloud Support Policy
+description: Calico Cloud Support Policy 2022
 ---
 
-# Calico Cloud Support Policy
+# Calico Cloud Support Policy 2022
 
 **Effective date**: February 18, 2022
 
@@ -24,13 +24,17 @@ Customer agrees to cooperate with and assist Tigera in its troubleshooting and r
 | Standard       | Any other issue that is not deemed to be critical.           | Within 16 Hours |
 |                | *All verbal and written support provided by Tigera will be in English.* |                 |
 
+Tigera shall have no obligation to resolve Issues unless Customer provides all the information and access required by Tigera.
+
 To access and use Subscription Support, you must raise any issues via the Support Portal and provide Tigera with sufficient information to validate your entitlement to the relevant Subscription Support Level.
 
 We do not provide Subscription Support for Solution that (a) you (or a third party) have modified or recompiled or (b) is running on a platform that is not a platform supported by Tigera. You are responsible for testing the Solution before deploying it in your environment. You should also backup your systems on a regular basis and have those backups available if needed for resolving technical issues.
 
 Subscription Support is provided in the English language. Tigera’s standard business hours are 8am-5pm Pacific Time, Monday-Friday excluding standard public holidays.
 
-**Third Party Access**. Customer may allow Authorized Users and Affiliates to use the Technology and access the Services solely for Customer’s business purposes, provided that Customer ensures its Authorized Users and Affiliates comply with the terms of this Agreement. Upon request, Customer will provide Tigera with details of all Users and Affiliates authorized to access the Technology.=
+**Third Party Access**
+
+Customer may allow Authorized Users and Affiliates to use the Technology and access the Services solely for Customer’s business purposes, provided that Customer ensures its Authorized Users and Affiliates comply with the terms of this Agreement. Upon request, Customer will provide Tigera with details of all Users and Affiliates authorized to access the Technology.
 
 ## Exclusions
 
@@ -52,4 +56,4 @@ Tigera may modify the terms of its support from time to time. Any changes made t
 
 ## Previous {{prodname}} Subscription Support Policy
 
-[Calico Cloud Subscription Support Policy](https://www.tigera.io/legal/calico-cloud-support-policy-february-16-2021-february-18-2022/) (February 16, 2021 – February 18, 2022)
+- [Calico Cloud Support Policy](../getting-started/support-policy-2021.mdx)
