--- a/calico-cloud_versioned_docs/version-18-2/get-started/support-policy-2022.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/get-started/support-policy-2022.mdx
@@ -56,4 +56,4 @@ Tigera may modify the terms of its support from time to time. Any changes made t
 
 ## Previous {{prodname}} Subscription Support Policy
 
-- [Calico Cloud Support Policy 2021](../get-started/support-policy-2021.mdx)
+- [Calico Cloud Support Policy 2021](../get-started/support-policy-2021)
