--- a/calico-cloud_versioned_docs/version-18/get-started/upgrade-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-18/get-started/upgrade-cluster.mdx
@@ -6,9 +6,9 @@ description: Steps to upgrade to the latest version of Calico Cloud.
 
 ## Upgrade notices
 
-You are required to upgrade your cluster to the latest {{prodname}} version before the cluster reaches two minor releases older than the current release. For example, if the latest {{prodname}} version is based on 3.19, managed clusters with v3.16 or older will not be covered for fixes under the [Calico Cloud Support Policy 2022](../get-started/support-policy-2022.mdx).
+{{prodname}} supports the latest version minus two versions under the [Calico Cloud Support Policy](../get-started/support-policy-2022). For example, if the latest is CC 19, CC 18 and CC 17 are fully supported.
 
-Upgrade notices are provided 26 days in advance in Manager UI, **Managed clusters** page. For example:
+Upgrade notices are displayed 26 days prior to a new release in Manager UI, **Managed clusters** page. For example:
 
 ![upgrade-notice](/img/calico-cloud/upgrade-notice.png)
 
