--- a/calico-cloud_versioned_docs/version-18-2/about/product-comparison.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/about/product-comparison.mdx
@@ -21,8 +21,6 @@ The SaaS version of Calico Enterprise. It adds Image Assurance to scan and detec
 
 ![calico-cloud](/img/calico/calico-cloud.svg)
 
-## Best fit
-
 What is the best fit for you? It depends on your needs. The following table provides a high-level comparison.
 
 | Product                   | Cost and support                                             | Best fit                                                     |
@@ -33,16 +31,16 @@ What is the best fit for you? It depends on your needs. The following table prov
 
 ## Product comparison by feature
 
-|                                                              | Calico Open Source       | Calico Cloud             | Calico Enterprise  |
+|                                                              | <center>Calico Open Source</center> | <center>Calico Cloud</center> | <center>Calico Enterprise</center> |
 | ------------------------------------------------------------ | ------------------------ | ------------------------ | ------------------------ |
-| **Networking**                                               |                          |                          |                          |
+| **Networking security and scalability**             |                          |                          |                          |
 | High-performance, scalable pod networking                    | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Advanced IP address management                               | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Direct infrastructure peering without the overlay            | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Dual ToR peering                                             |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Egress gateway                                               |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Multiple Calico networks on a pod                            |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Apps, pods, clusters**                                     |                          |                          |                          |
+| **Application, pod, cluster security**                    | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Seamless support with Kubernetes network policy              | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Label-based (identity-aware) policy                          | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Namespace and cluster-wide scope                             | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
@@ -57,41 +55,46 @@ What is the best fit for you? It depends on your needs. The following table prov
 | Preview and staged network policy                            |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Policy integration for third-party firewalls                 |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Network sets to limit IP ranges for egress and ingress traffic to workloads | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
-| **Data**                                                     |                          |                          |                          |
+| **Data security and storage**                           | **<center>Calico Open Source</center>** | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Data-in-transit encryption for pod traffic using WireGuard   | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | SIEM integration                                             |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Non-cluster hosts**                                        | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
+|  | |  |  |
+| **Non-cluster host security**                               | **<center>Calico Open Source</center>** | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Restrict traffic to/from hosts using network policy          | <center>&#10003</center> |                          | <center>&#10003</center> |
 | Automatic host endpoints                                     | <center>&#10003</center> |                          | <center>&#10003</center> |
 | Secure Kubernetes nodes with host endpoints managed by Calico | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Apply policy to host-forwarded traffic                       | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
-| **Dataplane**                                                |                          |                          |                          |
+| **Dataplane support**                                  | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | eBPF                                                         | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | iptables                                                     | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Windows HNS                                                  | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | VPP                                                          | <center>&#10003</center> |                          |                          |
-| **Image Assurance**                                          |                          |                          |                          |
+| **Image vulnerability management**                           | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Scan images for vulnerabilities for workloads in Kubernetes cluster |                          | <center>&#10003</center> |                          |
 | Create policy to block vulnerable images from your clusters  |                          | <center>&#10003</center> |                          |
 | Runtime view to assess impact of newly-found vulnerabilities |                          | <center>&#10003</center> |                          |
-| **Observability and troubleshooting**                        |                          |                          |                          |
-| Application level observability and troubleshooting          |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Service Graph                                                |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Packet capture                                               |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Elasticsearch  logs (flow, l7, audit, bgp, dns, events)      |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Alerts                                                       |                          | <center>&#10003</center> | <center>&#10003</center> |
+| **Application observability and troubleshooting**            | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| Graphical view of deployment (Service Graph)                                |<center>Using third-party tools</center>| <center>&#10003</center> | <center>&#10003</center> |
+| Packet capture                                               |<center>Using third-party tools</center>| <center>&#10003</center> | <center>&#10003</center> |
+| Exportable logs                                              |<center>L3-4 flows, manual integration with any SIEM</center> | Preconfigured Elasticsearch dashboards: flow, audit, bgp, dns, L7 | Preconfigured Elasticsearch dashboards: flow, audit, bgp, dns, L7 |
+| Prometheus for metrics and alert monitoring |<center>Supports manual deployment</center>| <center>&#10003</center> | <center>&#10003</center> |
 | Kibana DNS dashboards                                        |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Traffic Flow Visualizer                                      |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Multi-cluster management**                                 |                          | <center>&#10003</center> | <center>&#10003</center> |
-| Multi-cluster management                                     |                          |                          | <center>&#10003</center> |
-| Federated identity and services                              |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Threat defense**                                           |                          |                          |                          |
+| **Kubernetes security posture management** | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| Review overall score based on namespace isolation, container image vulnerabilities, and egress access | | <center>&#10003</center> |  |
+| Prioritized list of remediation actions | | <center>&#10003</center> |  |
+| **Cluster mesh**                                             | <center>**Calico Open Source**</center>                     | <center>**Calico Cloud**</center>                            | <center>**Calico Enterprise**</center>                       |
+| Native Kubernetes cross-cluster networking (ToR and IP-in-IP) | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
+| Multi-cluster management with RBAC integration | <center>CLI only</center> |  | <center>GUI and CLI</center> |
+| Federated cross-cluster networking (VXLAN) |  | <center>&#10003</center> | <center>&#10003</center> |
+| Federated identity-aware policy and services enforcement |  | <center>&#10003</center> | <center>&#10003</center> |
+| **Threat defense**                                           | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Container threat detection                                   |                          | <center>&#10003</center> |                          |
 | Workload-centric Web Application Firewall (WAF)              |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Honeypods to see intruder activity                           |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Add threatfeeds to trace suspicious network flows            |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Reports**                                                  |                          |                          |                          |
+| **Compliance**                                    | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Compliance reports                                           |                          | <center>&#10003</center> | <center>&#10003</center> |
 | CIS benchmark reports                                        |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Monitor Calico components**                                |                          |                          |                          |
+| **Monitor Calico components**                                | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Prometheus                                                   | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
