--- a/calico_versioned_docs/version-3.27/about/kubernetes-training/product-comparison.mdx
+++ b/calico_versioned_docs/version-3.27/about/kubernetes-training/product-comparison.mdx
@@ -33,14 +33,14 @@ What is the best fit for you? It depends on your needs. The following table prov
 
 |                                                              | <center>Calico Open Source</center> | <center>Calico Cloud</center> | <center>Calico Enterprise</center> |
 | ------------------------------------------------------------ | ------------------------ | ------------------------ | ------------------------ |
-| **Networking security and scalability**             |                          |                          |                          |
+| **Networking**                                               |                          |                          |                          |
 | High-performance, scalable pod networking                    | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Advanced IP address management                               | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Direct infrastructure peering without the overlay            | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Dual ToR peering                                             |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Egress gateway                                               |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Multiple Calico networks on a pod                            |                          | <center>&#10003</center> | <center>&#10003</center> |
-| **Application, pod, cluster security**                    | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| **Apps, pods, clusters**                                     | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Seamless support with Kubernetes network policy              | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Label-based (identity-aware) policy                          | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Namespace and cluster-wide scope                             | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
@@ -55,16 +55,16 @@ What is the best fit for you? It depends on your needs. The following table prov
 | Preview and staged network policy                            |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Policy integration for third-party firewalls                 |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Network sets to limit IP ranges for egress and ingress traffic to workloads | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
-| **Data security and storage**                           | **<center>Calico Open Source</center>** | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| **Data**                                                     | **<center>Calico Open Source</center>** | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Data-in-transit encryption for pod traffic using WireGuard   | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | SIEM integration                                             |                          | <center>&#10003</center> | <center>&#10003</center> |
 |  | |  |  |
-| **Non-cluster host security**                               | **<center>Calico Open Source</center>** | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| **Non-cluster hosts**                                        | **<center>Calico Open Source</center>** | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Restrict traffic to/from hosts using network policy          | <center>&#10003</center> |                          | <center>&#10003</center> |
 | Automatic host endpoints                                     | <center>&#10003</center> |                          | <center>&#10003</center> |
 | Secure Kubernetes nodes with host endpoints managed by Calico | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Apply policy to host-forwarded traffic                       | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
-| **Dataplane support**                                  | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| **Dataplane**                                                | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | eBPF                                                         | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | iptables                                                     | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Windows HNS                                                  | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
@@ -83,8 +83,8 @@ What is the best fit for you? It depends on your needs. The following table prov
 | **Kubernetes security posture management** | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
 | Review overall score based on namespace isolation, container image vulnerabilities, and egress access | | <center>&#10003</center> |  |
 | Prioritized list of remediation actions | | <center>&#10003</center> |  |
-| **Cluster mesh**                                             | <center>**Calico Open Source**</center>                     | <center>**Calico Cloud**</center>                            | <center>**Calico Enterprise**</center>                       |
-| Native Kubernetes cross-cluster networking (ToR and IP-in-IP) | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
+| **Cluster mesh**                                             | <center>**Calico Open Source**</center>                      | <center>**Calico Cloud**</center>                            | <center>**Calico Enterprise**</center>                       |
+| Native Kubernetes cross-cluster networking (ToR and IP-in-IP) | <center>&#10003</center> |  | <center>&#10003</center> |
 | Multi-cluster management with RBAC integration | <center>CLI only</center> |  | <center>GUI and CLI</center> |
 | Federated cross-cluster networking (VXLAN) |  | <center>&#10003</center> | <center>&#10003</center> |
 | Federated identity-aware policy and services enforcement |  | <center>&#10003</center> | <center>&#10003</center> |
