docs: use correct api-resource name when using `kubectl` command

--- a/calico_versioned_docs/version-3.27/operations/troubleshoot/component-logs.mdx
+++ b/calico_versioned_docs/version-3.27/operations/troubleshoot/component-logs.mdx
@@ -61,7 +61,7 @@ To modify the BGP log level:
 1. Get the current bgpconfig settings.
 
    ```bash
-   kubectl get bgpconfig -o yaml > bgp.yaml
+   kubectl get bgpconfiguration -o yaml > bgp.yaml
    ```
 
 1. Modify logSeverityScreen to the desired value.
@@ -98,7 +98,7 @@ To modify Felix's log level:
 1. Get the current felixconfig settings.
 
    ```bash
-   kubectl get felixconfig -o yaml > felixconfig.yaml
+   kubectl get felixconfiguration -o yaml > felixconfig.yaml
    ```
 
 1. Modify logSeverityScreen to desired value.
