Doc for DGA detection
We are recreating the DGA detector within the Runtime Security architecture.

The user will see security events for DNS lookups for algorithm-generated
domain names, if such lookups are occurring in their cluster.  In the previous
'Anomaly Detection' architecture this would have been subject to the existence
of a GlobalAlert resource with type: AnomalyDetection and detector: dga, but
now it happens unconditionally.

This change also simplifies and improves the table of MITRE tactics on the
Security Events page.  The 'Attack techniques' column is renamed 'Purpose'
because it really describes the general purpose of the tactic and not specific
techniques.  The 'Target' column is removed because it was inconsistent in its
content - sometimes an actual target, and sometimes a more general concept -
and in all cases was simply duplicating what was already in the following
column.

--- a/calico-cloud/visibility/alerts.mdx
+++ b/calico-cloud/visibility/alerts.mdx
@@ -59,7 +59,7 @@ You can create alerts for many {{prodname}} features. Although the following lis
 
 Note the following:
 
-- The alert event list will be empty until you configure alerts for a feature
+- The alert event list will be empty, if no alerts have occurred yet
 - You can dismiss alert events from view using the checkboxes or bulk action
 - The list may contain alert events that are identical or nearly identical. For nearly identical events, you can see differences in the `record` field when you expand the event.
 - Because alert events share the same interface, fields that do not apply to the alert are noted by “N/A”
