--- a/calico-cloud_versioned_docs/version-18-2/visibility/alerts.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/visibility/alerts.mdx
@@ -59,7 +59,7 @@ You can create alerts for many {{prodname}} features. Although the following lis
 
 Note the following:
 
-- The alert event list will be empty until you configure alerts for a feature
+- The alert event list will be empty, if no alerts have occurred yet
 - You can dismiss alert events from view using the checkboxes or bulk action
 - The list may contain alert events that are identical or nearly identical. For nearly identical events, you can see differences in the `record` field when you expand the event.
 - Because alert events share the same interface, fields that do not apply to the alert are noted by “N/A”
