[TSLA-5932] Update downgrade instructions for calico cloud

--- a/calico-cloud/operations/disconnect.mdx
+++ b/calico-cloud/operations/disconnect.mdx
@@ -8,10 +8,6 @@ Whether you've finished with your {{prodname}} Trial or decided to disconnect yo
 {{prodname}}, we know you want your cluster to remain functional. We highly recommend running
 a simple script to migrate your cluster to open-source Project Calico.
 
-## Before you start...
-
-Ensure that you have `kubectl` access to your Kubernetes cluster you wish to disconnect from {{prodname}}.
-
 ## About the migration script
 
 The script migrates all applicable {{prodname}} components to open-source Project Calico; this includes
@@ -31,6 +27,11 @@ to and from {{prodname}} and open-source Calico namespaces. If you keep policies
 to allow this necessary traffic.
 
 :::
+
+### Before you begin
+
+* Ensure that you have `kubectl` admin access to the Kubernetes cluster you wish to disconnect from {{prodname}}.
+* You are accessing the cluster from a linux based machine
 
 ### Run the migration script
 
