--- a/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-18/release-notes/index.mdx
@@ -104,7 +104,9 @@ For more information, see [Web application firewall](../threat/web-application-f
   - Image Assurance configuration page fails to load
   - The Manager UI shows the enterprise license countdown at the top of the screen even for paid customers
 
-If you are experiencing any login issues, go to https://calicocloud.io and log back in.
+   If you are experiencing any login issues, go to https://calicocloud.io and log back in.
+
+* Calico panics if kube-proxy or other components are using native `nftables` rules instead of the `iptables-nft` compatibility shim. Until Calico supports native nftables mode, we recommend that you continue to use the iptables-nft compatibility layer for all components. (The compatibility layer was the only option before Kubernetes v1.29 added alpha-level `nftables` support.) Do not run Calico in "legacy" iptables mode on a system that is also using `nftables`. Although this combination does not panic or fail (at least on kernels that support both), the interaction between `iptables` "legacy" mode and `nftables` is confusing: both `iptables` and `nftables` rules can be executed on the same packet, leading to policy verdicts being "overturned". Note that this issue applies to all previous versions of {{prodname}}.
 
 ### Bug fixes
 
