--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -90,9 +90,14 @@ For more information, see [Enable the eBPF data plane](../operations/ebpf/enabli
 
 <!--
 ## Security fixes
-
-## Known issues
 -->
+## Known issues
+
+- Calico panics if kube-proxy or other components are using native `nftables` rules instead of the `iptables-nft` compatibility shim.
+
+   Until Calico supports native nftables mode, we recommend that you continue to use the iptables-nft compatibility layer for all components. (The compatibility layer was the only option before Kubernetes v1.29 added alpha-level `nftables` support.)
+
+   Do not run Calico in "legacy" iptables mode on a system that is also using `nftables`. Although this combination does not panic or fail (at least on kernels that support both), the interaction between `iptables` "legacy" mode and `nftables` is confusing: both `iptables` and `nftables` rules can be executed on the same packet, leading to policy verdicts being "overturned".
 
 ## Release details
 
