Address review comments

--- a/calico-cloud/operations/disconnect.mdx
+++ b/calico-cloud/operations/disconnect.mdx
@@ -30,8 +30,8 @@ to allow this necessary traffic.
 
 ### Before you begin
 
-* Ensure that you have `kubectl` admin access to the Kubernetes cluster you wish to disconnect from {{prodname}}.
-* You are accessing the cluster from a linux based machine
+* You have `kubectl` administrator access to the cluster you want to migrate to Calico Open Source.
+* You are accessing the cluster from a Linux-based machine.
 
 ### Run the migration script
 
