--- a/calico-cloud_versioned_docs/version-18-2/users/create-and-assign-custom-roles.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/users/create-and-assign-custom-roles.mdx
@@ -36,7 +36,7 @@ Certain permissions are required for a user to access common {{prodname}} featur
 
 ## Before you begin
 
-* You must be signed in to {{prodname}} UI as an administrator.
+* You are signed in with owner or administrator permissions to the Calico Cloud Manager UI.
 
 ## Create a custom role and add permissions
 
@@ -45,7 +45,7 @@ Certain permissions are required for a user to access common {{prodname}} featur
 1. Select the cluster you want to want the role to apply to by clicking **Cluster:** and choosing the cluster.
 1. Locate your new role in the list, select **Action** > **Manage permissions** > **Edit**, and the click **Add Permission**.
 1. Under **Permission**, choose a permission type from the list.
-   Depending on the permission, you may also need to choose a namespace or policy tier.
+Depending on the permission, you may also need to choose a namespace or policy tier.
 1. (optional) Click **Add permission** to add more permissions to your role for this cluster.
 1. Click **Save** to save these permissions to the role for this cluster.
 1. (optional) If you want to add the permissions for another cluster, repeat steps 3 to 7 for the cluster.
@@ -55,3 +55,31 @@ Certain permissions are required for a user to access common {{prodname}} featur
 1. Select the user icon <IconUser width="20"/> > **Manage Team**.
 1. Under the **Users** tab, locate the user in the list and select **Action** > **Edit**.
 1. Select the checkboxes for each custom role you want to assign to this user and then click **Save**.
+
+## Export custom roles and apply to other managed clusters
+
+You can export custom roles from one cluster and apply them to another cluster.
+
+:::note
+Importing custom roles is fully supported on managed clusters running Calico Cloud 18.3 or higher.
+:::
+
+***Prerequisites***
+
+* You connected two or more managed clusters to Calico Cloud.
+* You have a managed cluster with one or more custom roles.
+* You have `kubectl` administrator permissions for the managed clusters you want to apply custom roles to.
+
+***Procedure***
+
+1. From the cluster menu in the Calico Cloud Manager UI, select the managed cluster that has the custom roles you want to export.
+1. Click the user icon <IconUser width="20"/> > **Manage Team**.
+1. Under the **Roles** tab, click **Export Custom Roles** and select **Export YAML** to download the custom role definitions.
+This file contains definitions for all the custom roles you created in this cluster.
+1. For each managed cluster you want to apply the custom roles to, run the following command:
+
+```bash
+kubectl apply -f roles.<cluster-name>.yaml
+   ```
+
+The custom roles are available immediately for this cluster in the Calico Cloud Manager UI.
