--- a/calico-cloud_versioned_docs/version-18-2/image-assurance/scanners/registry-scanner.mdx
+++ b/calico-cloud_versioned_docs/version-18-2/image-assurance/scanners/registry-scanner.mdx
@@ -62,7 +62,7 @@ The registry scanner requires authentication to access a registry. Set up creden
 - **Docker/Google** - scans only tagged images; untagged images residing in your image registry are not pulled and scanned.
 - **Azure or AWS** - scans tagged and untagged images (all)
 
-#### Docker/GRC required credentials
+#### Docker/GCR required credentials
 
 - `DOCKER_USERNAME`
 - `DOCKER_PASSWORD`
