DOCS-2024: Changes reference from Alerts to Security Events

--- a/calico-cloud/threat/container-threat-detection.mdx
+++ b/calico-cloud/threat/container-threat-detection.mdx
@@ -23,7 +23,7 @@ Get alerts when security threats, such as malware and other suspicious processes
 As part of these threat detection capabilities, {{prodname}} maintains a database of malware file
 hashes. This database consists of SHA256, SHA1, and MD5 hashes of executable file contents that are
 known to be malicious. Whenever a program is launched in a {{prodname}} cluster, malware
-detection generates an alert in the Alerts dashboard if the program's hash matches one that is known
+detection generates an alert in the Security Events dashboard if the program's hash matches one that is known
 to be malicious.
 
 Our threat detection engine also monitors activity within the containers running in your clusters to detect suspicious behavior and generate corresponding alerts. The threat detection engine monitors the following types of suspicious activity within containers:
@@ -66,7 +66,7 @@ so we can bundle the BTF data to precisely match the version of the kernel runni
 ## How to
 
 - [Enable Container threat detection in the managed cluster](#enable-container-threat-detection)
-- [Monitor Alerts page for malicious programs](#monitor-alerts-page-for-malicious-programs)
+- [Monitor the Security Events page for malicious programs](#monitor-alerts-page-for-malicious-programs)
 
 ### Enable Container Threat Detection
 
@@ -86,9 +86,9 @@ metadata:
 EOF
 ```
 
-### Monitor Alerts page for malicious programs
+### Monitor the Security Events page for malicious programs
 
-If a malicious or suspicious program is run within the cluster, it will be reported on the Alerts page of the
+If a malicious or suspicious program is run within the cluster, it will be reported on the Security Events page of the
 {{prodname}} UI.
 
 ![malware-alert-example](/img/calico-cloud/malware-alert-example.png)
@@ -96,4 +96,4 @@ If a malicious or suspicious program is run within the cluster, it will be repor
 ## Container activity logs in Kibana
 
 Lower-level reports for file and process activity are captured for your cluster in Kibana using the index pattern `tigera_secure_ee_runtime*`.
-Please note that most of these reports are not usually malicious; they constitute the raw data against which known malicious program fingerprints and activity patterns are compared. Suspicious and known malicious activity is reported on the **Alerts** page of the {{prodname}} UI.
+Please note that most of these reports are not usually malicious; they constitute the raw data against which known malicious program fingerprints and activity patterns are compared. Suspicious and known malicious activity is reported on the **Security Events** page of the {{prodname}} UI.
