--- a/calico-enterprise/threat/suspicious-domains.mdx
+++ b/calico-enterprise/threat/suspicious-domains.mdx
@@ -66,7 +66,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    <br />
    From the **Action** menu, you can view or edit the details that you entered and can download the manifest file.
 
-> Go to the Alerts page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
+> Go to the Security Events page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
 
 #### Using CLIs
 
@@ -94,7 +94,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    kubectl apply -f <your_threatfeed_filename>
    ```
 
-> Go to the Alerts page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
+> Go to the Security Events page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
 
 ### Push threat feed updates
 
@@ -143,7 +143,7 @@ Use the push method if your threat feeds that are not in newline-delimited forma
       }
    ```
 
-4. In {{prodname}} Manager, go the “Alerts” page to view events that are generated when an endpoint in the cluster queries a name on the list.
+4. In {{prodname}} Manager, go the “Security Events” page to view events that are generated when an endpoint in the cluster queries a name on the list.
 
 ## Additional resources
 
