--- a/calico-enterprise/threat/suspicious-ips.mdx
+++ b/calico-enterprise/threat/suspicious-ips.mdx
@@ -70,7 +70,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    <br />
    From the **Action** menu, you can view or edit the details that you entered and can download the manifest file.
 
-> Go to the Alerts page to view events that are generated when an IP is displayed on the threat feed list. For more information, see [Manage alerts](../visibility/alerts.mdx). When you create a global threat feed in Manager UI, network traffic is not automatically blocked. If you find suspicious IPs on the Alerts page, you need to create a network policy to block the traffic. For help with policy, see [Block traffic to a cluster](#block-traffic-to-a-cluster).
+> Go to the Security Events page to view events that are generated when an IP is displayed on the threat feed list. For more information, see [Manage alerts](../visibility/alerts.mdx). When you create a global threat feed in Manager UI, network traffic is not automatically blocked. If you find suspicious IPs on the Security Events page, you need to create a network policy to block the traffic. For help with policy, see [Block traffic to a cluster](#block-traffic-to-a-cluster).
 
 #### Using CLIs
 
@@ -98,7 +98,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    kubectl apply -f <your_threatfeed_filename>
    ```
 
-> Go to the Alerts page to view events that are generated when an IP is displayed on the threat feed list. For more information, see [Manage alerts](../visibility/alerts.mdx).
+> Go to the Security Events page to view events that are generated when an IP is displayed on the threat feed list. For more information, see [Manage alerts](../visibility/alerts.mdx).
 
 ### Push threat feed updates
 
@@ -147,7 +147,7 @@ Use the push method if your threat feeds that are not in newline-delimited forma
       ```
 
 
-4. In {{prodname}} Manager, go the “Alerts" page to view events that are generated when an IP is displayed on the threat feed list.
+4. In {{prodname}} Manager, go the “Security Events" page to view events that are generated when an IP is displayed on the threat feed list.
 
 ### Block traffic to a cluster
 
@@ -238,7 +238,7 @@ If you haven’t already adjusted your [aggregation flows](#before-you-begin), w
 
 ### Check search results
 
-Open {{prodname}} Manager, and navigate to the “Alerts” page. If any of your pods have been communicating with the IP addresses in the FEODO tracker feed, you will see the results listed on this page. It is normal to not see any events listed on this page.
+Open {{prodname}} Manager, and navigate to the “Security Events” page. If any of your pods have been communicating with the IP addresses in the FEODO tracker feed, you will see the results listed on this page. It is normal to not see any events listed on this page.
 
 ### Block pods from contacting IPs
 
