--- a/calico-cloud/threat/honeypods.mdx
+++ b/calico-cloud/threat/honeypods.mdx
@@ -30,7 +30,7 @@ This how-to guide uses the following {{prodname}} features:
 
 ### Honeypod implementation
 
-Honeypods can be configured on a per-cluster basis using "template" honeypod manifests that are easily customizable. Any alerts triggered are displayed in the Alerts tab in {{prodname}} Manager UI. The Honeypod Dashboard in Kibana provides an easy way to monitor and analyze traffic reaching the honeypods.
+Honeypods can be configured on a per-cluster basis using "template" honeypod manifests that are easily customizable. Any alerts triggered are displayed in the Security Events tab in {{prodname}} Manager UI. The Honeypod Dashboard in Kibana provides an easy way to monitor and analyze traffic reaching the honeypods.
 
 ## How To
 
