--- a/calico-cloud/threat/suspicious-domains.mdx
+++ b/calico-cloud/threat/suspicious-domains.mdx
@@ -62,7 +62,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    
    From the **Action** menu, you can view or edit the details that you entered and can download the manifest file.
 
-> Go to the Alerts page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
+> Go to the Security Events page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
 
 #### Using CLIs
 
@@ -90,7 +90,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    kubectl apply -f <your_threatfeed_filename>
    ```
 
-> Go to the Alerts page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
+> Go to the Security Events page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
 
 ## Additional resources
 
