Update test on flow logs

--- a/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
@@ -21,9 +21,9 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 We’ve updated the Felix parameter (`dest_domains`) for DNS policy to make it easy to find only domain names that the deployment actually connected to (not all the domain names that got translated to the same IP address).
 For more information, see [Flow log data types](../visibility/elastic/flow/datatypes.mdx).
 
-### Improvements to Endpoints page in Manager UI
+### New flow logs panel on Endpoints page
 
-We've updated the Endpoints page so you can view and filter for Endpoints that are associated with denied traffic and associated flow logs. Denied traffic results includes the source, destination, ports, protocols, and other key forms for metadata associated with those flows. You can then go to the Policy Board and see that the policies that have been highlighted as having denied traffic.
+We've updated the Endpoints page with a new flow logs panel so you can view and filter for Endpoints associated with denied traffic. Flow logs include the source, destination, ports, protocols, and other key forms for metadata. We've also updated the Policy Board to highlight policies with denied traffic.
 
 ### Improvements to Security events dashboard
 
